--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.13.3
-opencv-python==3.3.1.11
-Pillow==5.0.0
-scikit-learn==0.19.1
-scipy==1.0.0
+numpy
+opencv-python
+Pillow
+scikit-learn
+scipy
