--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-numpy
-opencv-python
-Pillow
-scikit-learn
-scipy
+cycler==0.10.0
+kiwisolver==1.0.1
+matplotlib==2.2.3
+numpy==1.15.1
+opencv-python==3.4.2.17
+Pillow==5.2.0
+pyparsing==2.2.0
+python-dateutil==2.7.3
+pytz==2018.5
+scikit-learn==0.19.2
+scipy==1.1.0
+six==1.11.0
